# db-migrator

./: .gitignore  .travis.yml  README.md  db-migrator.cabal  pg-migrator.cabal  stack.yaml
app/: Main.hs
src/Database/: Migrator.hs
test/: Spec.hs
