name:                db-migrator
version:             0.1.0.0
synopsis:            Database migrator for Postgres
homepage:            https://github.com/vyacheslavhashov/db-migrator#readme
author:              Vyacheslav Hashov
maintainer:          Vyacheslav Hashov
copyright:           2016 (c) 
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       Database.Migrator
  build-depends:         base >= 4.7 && < 5
                       , transformers
                       , mtl
                       , hasql
                       , containers
                       , text
                       , bytestring
                       , time
                       , directory
                       , filepath
                       , filemanip
                       , unix-compat
                       
  default-language:    Haskell2010

executable db-migrator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , db-migrator
  default-language:    Haskell2010

test-suite db-migrator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , db-migrator
                     , transformers
                     , mtl
                     , hasql
                     , containers
                     , text
                     , bytestring
                     , time
                     , directory
                     , filepath
                     , filemanip
                     , unix-compat
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vyacheslavhashov/db-migrator
